<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.SucKhoe.SucKhoeFragment">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/health_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <CheckBox
            android:id="@+id/cbSot"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorCheckBox"
            android:text="@string/fever"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <CheckBox
            android:id="@+id/cbHo"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorCheckBox"
            android:text="@string/cough"
            app:layout_constraintEnd_toStartOf="@+id/cbKhoTho"
            app:layout_constraintStart_toEndOf="@+id/cbSot"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <CheckBox
            android:id="@+id/cbKhoTho"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorCheckBox"
            android:text="@string/short_breath"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <CheckBox
            android:id="@+id/cbDauNguoi"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorCheckBox"
            android:text="@string/body_aches"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbSot" />

        <CheckBox
            android:id="@+id/cbSucKhoeTot"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorCheckBox"
            android:text="@string/healthy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbSot" />

        <Button
            android:id="@+id/btnGuiTT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold"
            android:text="@string/send_info_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbDauNguoi" />

        <View
            android:id="@+id/view2"
            style="@style/Divider.Horizontal"
            android:layout_height="5dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGuiTT" />

        <ListView
            android:id="@+id/lsvLichSu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="55dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/health_history"
            android:textColor="@color/colorCovid"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/health_tracking"
            android:textColor="@color/colorCovid"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>