<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.MainActivity">

        <TextView
            android:id="@+id/txtTuVong"
            android:layout_width="92dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button"
            android:backgroundTint="#33E91E63"
            android:gravity="center"
            android:text="@string/dead"
            android:textColor="@color/colorCovid"
            app:layout_constraintEnd_toStartOf="@+id/txtBinhPhuc"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toEndOf="@+id/txtNhiemBenh"
            app:layout_constraintTop_toBottomOf="@+id/txtThongTin" />

        <TextView
            android:id="@+id/txtBinhPhuc"
            android:layout_width="92dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button"
            android:backgroundTint="#334CAF50"
            android:gravity="center"
            android:text="@string/recover"
            android:textColor="@color/colorCovid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtThongTin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/disease_info"
            android:textColor="@color/colorCovid"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnVietNam"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner_main_button"
            android:backgroundTint="#33FFEB3B"
            android:drawableLeft="@drawable/ic_stars"
            android:text="@string/vietnam_btn"
            android:textColor="@color/colorTextButton"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btnTheGioi"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner_main_button"
            android:backgroundTint="#3300BCD4"
            android:drawableLeft="@drawable/ic_public"
            android:text="@string/world_btn"
            android:textColor="@color/colorTextButton"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/btnVietNam"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/txtThongTin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/nation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVietNam" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNhiemBenh"
            android:layout_width="92dp"
            android:layout_height="90dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            android:backgroundTint="#33FF9800"
            android:gravity="center"
            android:text="@string/infection"
            android:textColor="@color/colorCovid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtThongTin" />

        <TextView
            android:id="@+id/txtCapNhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/update"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNhiemBenh" />

        <Button
            android:id="@+id/btnKhaiBao"
            android:layout_width="152dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold"
            android:text="@string/vmd_btn"
            app:layout_constraintEnd_toStartOf="@+id/btnHuongDan"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCapNhat" />

        <Button
            android:id="@+id/btnHuongDan"
            android:layout_width="152dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button"
            android:text="@string/ipe_btn"
            android:textStyle="bold"
            android:textColor="@color/colorTextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCapNhat" />

        <View
            android:id="@+id/view2"
            style="@style/Divider.Horizontal"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnKhaiBao" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/warning_areas"
            android:textColor="@color/colorCovid"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/txtChiTiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/see_details"
            android:textColor="@color/colorLink"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVietNam" />

        <TextView
            android:id="@+id/txtNguon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/source"
            android:textColor="@color/colorLink"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNhiemBenh" />

        <TextView
            android:id="@+id/txtMoRong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/zoom_in"
            android:textColor="@color/colorLink"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />


        <TextView
            android:id="@+id/txtNB_Num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="0"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtNhiemBenh"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="@+id/txtNhiemBenh"
            app:layout_constraintTop_toTopOf="@+id/txtNhiemBenh" />

        <TextView
            android:id="@+id/txtTV_Num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="0"
            android:textColor="#E91E63"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtTuVong"
            app:layout_constraintStart_toStartOf="@+id/txtTuVong"
            app:layout_constraintTop_toTopOf="@+id/txtTuVong" />

        <TextView
            android:id="@+id/txtBP_Num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="0"
            android:textColor="#4CAF50"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtBinhPhuc"
            app:layout_constraintStart_toStartOf="@+id/txtBinhPhuc"
            app:layout_constraintTop_toTopOf="@+id/txtBinhPhuc" />

        <Spinner
            android:id="@+id/spnQuocGia"
            android:layout_width="157dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/txtThongTin"
            app:layout_constraintTop_toBottomOf="@+id/btnVietNam" />

        <TextView
            android:id="@+id/txtNBtoday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+0"
            android:gravity="center"
            android:background="@drawable/button"
            android:backgroundTint="#FF9800"
            android:textColor="@color/colorTextButton"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtNhiemBenh"
            app:layout_constraintEnd_toEndOf="@+id/txtNhiemBenh"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="@+id/txtNhiemBenh" />

        <TextView
            android:id="@+id/txtTVtoday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+0"
            android:gravity="center"
            android:background="@drawable/button"
            android:backgroundTint="#E91E63"
            android:textColor="@color/colorTextButton"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtTuVong"
            app:layout_constraintEnd_toEndOf="@+id/txtTuVong"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtTuVong" />

        <TextView
            android:id="@+id/txtBPtoday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:background="@drawable/button"
            android:backgroundTint="#4CAF50"
            android:textColor="@color/colorTextButton"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtBinhPhuc"
            app:layout_constraintEnd_toEndOf="@+id/txtBinhPhuc"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/txtBinhPhuc" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>